Cambios en el login

--- a/find_all_here/find_all_here/HomeView.xaml
+++ b/find_all_here/find_all_here/HomeView.xaml
@@ -11,6 +11,7 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="➕" Command="{Binding AddProductCommand}" />
         <ToolbarItem Text="🛒" Command="{Binding OpenCartCommand}" />
+        <ToolbarItem Text="➜" Command="{Binding LogoutCommand}" />
     </ContentPage.ToolbarItems>
     
     <RefreshView x:DataType="local:HomeViewModel" Command="{Binding LoadProductsCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
