--- a/find_all_here/find_all_here/App.xaml
+++ b/find_all_here/find_all_here/App.xaml
@@ -8,12 +8,13 @@
             <Setter Property="RowSpacing" Value="0" />
         </Style>
         <ResourceDictionary>
-            <Color x:Key="Primary">#067bea</Color>
-            <Color x:Key="lbl-primary">#efefef</Color>
-            <Color x:Key="lbl-secondary">#cfcfcf</Color>
-            <Color x:Key="bg-body">#101010</Color>
-            <Color x:Key="bg-container">#202020</Color>
-            <Color x:Key="bg-outline">#303030</Color>
+            <Color x:Key="Primary">#0090e7</Color>
+            <Color x:Key="lbl-primary">#ffffff</Color>
+            <Color x:Key="lbl-secondary">#bfbfbf</Color>
+            <Color x:Key="lbl-outline">#6c7293</Color>
+            <Color x:Key="bg-body">#000000</Color>
+            <Color x:Key="bg-container">#191c24</Color>
+            <Color x:Key="bg-outline">#2a3038</Color>
             <Color x:Key="bg-profile">#404040</Color>
             <Color x:Key="btn-primary-outline">#330090e7</Color>
             <Color x:Key="btn-primary">#0090e7</Color>
@@ -21,6 +22,8 @@
             <Color x:Key="btn-success">#00d25b</Color>
             <Color x:Key="btn-danger-outline">#33fc424a</Color>
             <Color x:Key="btn-danger">#fc424a</Color>
+            <Color x:Key="btn-warning-outline">#33ffab00</Color>
+            <Color x:Key="btn-warning">#ffab00</Color>
             <Color x:Key="btn-info-outline">#338f5fe8</Color>
             <Color x:Key="btn-info">#8f5fe8</Color>
         </ResourceDictionary>
