--- a/find_all_here/find_all_here/LoginView.xaml
+++ b/find_all_here/find_all_here/LoginView.xaml
@@ -176,7 +176,7 @@
                             HorizontalOptions="CenterAndExpand"/>
                         <Frame Grid.Row="2"
                             Margin="0,30,0,0"
-                            Padding="5,0"
+                            Padding="10,0"
                             CornerRadius="5"
                             Background="{StaticResource bg-outline}">
                             <Entry
@@ -190,7 +190,7 @@
                                 VerticalOptions="FillAndExpand"/>
                         </Frame>
                         <Frame Grid.Row="3"
-                            Padding="5,0"
+                            Padding="10,0"
                             CornerRadius="5"
                             Background="{StaticResource bg-outline}">
                             <Entry 
@@ -205,7 +205,7 @@
                         </Frame>
                         <Button Grid.Row="4"
                             Text="¿Olvidaste tu contraseña?"
-                            Background="{StaticResource bg-body}"
+                            Background="{StaticResource bg-container}"
                             TextColor="{StaticResource lbl-primary}"
                             FontSize="12"
                             Margin="0,-20,0,0"
