--- a/find_all_here/find_all_here/RegisterView.xaml
+++ b/find_all_here/find_all_here/RegisterView.xaml
@@ -3,180 +3,132 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="find_all_here.RegisterView"
-    BackgroundColor="White">
+    BackgroundColor="{StaticResource bg-container}">
 
-    <ContentPage.Content>
-         <Grid RowSpacing="{OnPlatform iOS=25,Android=20}">
+    <ScrollView>
+        <StackLayout>
+            <ActivityIndicator
+                IsRunning="{Binding IsRunningTxt}"
+                IsVisible="{Binding IsVisibleTxt}"
+                Color="{StaticResource lbl-primary}"
+                Scale="0.8" />
+            <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/> <!--1-->
-                    <RowDefinition Height="Auto"/>  <!--2-->
-                    <RowDefinition Height="Auto"/>  <!--3-->
-                    <RowDefinition Height="Auto"/>  <!--4-->
-                    <RowDefinition Height="Auto"/>  <!--5-->
-                    <RowDefinition Height="Auto"/>  <!--6-->
-                    <RowDefinition Height="Auto"/>  <!--7-->
-                    <RowDefinition Height="Auto"/>  <!--8-->
-            </Grid.RowDefinitions>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-
-             <StackLayout Grid.Row="1">
-                <Image
-                    Source="IconEco.png"
-                    HeightRequest="{OnPlatform iOS=90,Android=70}"
-                    WidthRequest="{OnPlatform iOS=90,Android=0}"
-                    />
-            </StackLayout>
-
-            <StackLayout Grid.Row="2" HorizontalOptions="Center">
-                <Label
-                    Text="Sign up"
-                            TextColor="Black"
-                            Font="Montserrat-Medium.otf"
-                            FontSize="{OnPlatform Android=20,iOS=23}"
-                            WidthRequest="300"
-                    />
-            </StackLayout>
-
-            <StackLayout Grid.Row="3" HorizontalOptions="Center" WidthRequest="{OnPlatform iOS=300,Android=300}" Orientation="Vertical"  >
-                <Label
-                    Text="Email"
-                    FontSize="{OnPlatform Android=13}"
-                    TextColor="Black"
-                    />
-                <Frame
-                    HasShadow="{OnPlatform Android=true,iOS=false}"
-                    Padding="{OnPlatform Android=6,iOS=0}"
-                    CornerRadius="{OnPlatform Android=7}"
-                    >
-                <Entry
-                    Placeholder="BFortuna@gmail.com"
-                    Keyboard="Email"
-                    MaxLength="25"
-                    FontSize="{OnPlatform Android=15,iOS=16}"
-                    Text="{Binding EmailTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    />
-                     </Frame>   
-            </StackLayout>
-
-             <StackLayout Grid.Row="4" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" >
-                  
-                <Label
-                    Text="Password"
-                    FontSize="{OnPlatform Android=13}"
-                    TextColor="Black"
-                    />
-
-                 <Frame
-                     HasShadow="{OnPlatform Android=true,iOS=false}"
-                     Padding="{OnPlatform Android=6,iOS=0}"
-                    CornerRadius="{OnPlatform Android=7}"
-                     >
-
-                   <Entry
-                    Placeholder="******************"
-                    MaxLength="25"
-                    IsPassword="True"
-                    FontSize="{OnPlatform Android=15,iOS=16}"
-                    Text="{Binding PasswordTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    />
-                    
-                 </Frame>
-                       
-            </StackLayout>
-
-             <StackLayout Grid.Row="5" HorizontalOptions="Center" WidthRequest="300" Orientation="Vertical" >
-                 <Label
-                     Text="Fullname"
-                     FontSize="{OnPlatform Android=13}"
-                     TextColor="Black"/>
-
-                 <Frame
-                     HasShadow="{OnPlatform Android=true,iOS=false}"
-                     Padding="{OnPlatform Android=6,iOS=0}"
-                     CornerRadius="{OnPlatform Android=7}"
-                     >
-                  
-                <Entry
-                    Placeholder="Steve Jobs"
-                    MaxLength="25"
-                    Keyboard="Text"
-                    FontSize="{OnPlatform Android=15,iOS=16}"
-                    Text="{Binding NameTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    />
-                    
-                       </Frame>
-            </StackLayout>
-             <StackLayout Grid.Row="6" HorizontalOptions="Center" WidthRequest="300" Orientation="Horizontal" Spacing="20">
-                 <StackLayout WidthRequest="140">
-
-                 <Label
-                     Text="Age"
-                     FontSize="{OnPlatform Android=13}"
-                     TextColor="Black"/>
-
-                 <Frame
-                     HasShadow="{OnPlatform Android=true,iOS=false}"
-                     Padding="{OnPlatform Android=6,iOS=0}"
-                     CornerRadius="{OnPlatform Android=7}"
-                     >
-                  
-                <Entry
-                    Placeholder="18"
-                    MaxLength="2"
-                    FontSize="{OnPlatform Android=15,iOS=16}"
-                    Keyboard="Numeric"
-                    Text="{Binding AgeTxt, Mode=TwoWay}"
-                    IsEnabled="{Binding IsEnabledTxt}"
-                    />
-                    
-                       </Frame>
-                 </StackLayout>
-
-
-
-            </StackLayout>
-
-             <StackLayout Grid.Row="7" HorizontalOptions="Center">
-                   <ActivityIndicator
-                       IsRunning="{Binding IsRunningTxt, Mode=TwoWay}"
-                       IsVisible="{Binding IsVisibleTxt, Mode=TwoWay}"
-                       Color="Black"
-
-                       />
-            </StackLayout>
-
-
-            <StackLayout Grid.Row="8" HorizontalOptions="Center" Orientation="Vertical" >
-                      <Button
-                     Text="Register"
-                            TextColor="Black"
-                            Font="Montserrat-Medium.otf"
-                            FontSize="{OnPlatform Android=15}"
-                            BackgroundColor="#fcfcfc"
-                            BorderColor="#f2f2f2"
-                            BorderWidth="1.5"
-                            WidthRequest="300"
-                            HeightRequest="50"
-                            CornerRadius="7"
-                            Command="{Binding RegisterCommand}"
-                            IsEnabled="{Binding IsEnabledTxt, Mode=TwoWay}"
-                    />
-                  <Button
-                            Text="Already have an acount? Log in"
-                            TextColor="{OnPlatform iOS=Black}"
-                            FontSize="{OnPlatform Android=11,iOS=12}"
-                            BackgroundColor="White"
-                            Clicked="NavToLogin_Clicked"
-                            />
-                
-            </StackLayout>
-
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
+                </Grid.RowDefinitions>
+                <Image Grid.Row="0"
+                    Margin="0,50"
+                    Source="fah_logo.png"
+                    HeightRequest="125"
+                    WidthRequest="125"/>
+                <Frame Grid.Row="1"
+                    Margin="0,0,0,-25"
+                    HasShadow="True"
+                    BackgroundColor="{StaticResource bg-container}"
+                    BorderColor="{StaticResource bg-container}"
+                    CornerRadius="25">
+                    <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="20" Padding="20,40,20,65">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <Label Grid.Row="0"
+                            Text="Find All Here"
+                            FontSize="36"
+                            FontAttributes="Bold"
+                            TextColor="{StaticResource lbl-primary}"
+                            HorizontalOptions="CenterAndExpand"/>
+                        <Label Grid.Row="1"
+                            Margin="0,0,0,0"
+                            Text="Inicie sesión para continuar"
+                            FontSize="16"
+                            TextColor="{StaticResource lbl-secondary}"
+                            HorizontalOptions="CenterAndExpand"/>
+                        <Frame Grid.Row="2"
+                            Margin="0,30,0,0"
+                            Padding="10,0"
+                            CornerRadius="5"
+                            Background="{StaticResource bg-outline}">
+                            <Entry
+                                Placeholder="Usuario o correo electrónico"
+                                MaxLength="320"
+                                FontSize="16"
+                                TextColor="{StaticResource lbl-primary}"
+                                Text="{Binding EmailTxt, Mode=TwoWay}"
+                                IsEnabled="{Binding IsEnabledTxt}"
+                                HorizontalOptions="FillAndExpand"
+                                VerticalOptions="FillAndExpand"/>
+                        </Frame>
+                        <Frame Grid.Row="3"
+                            Padding="10,0"
+                            CornerRadius="5"
+                            Background="{StaticResource bg-outline}">
+                            <Entry 
+                                Placeholder="Contraseña"
+                                IsPassword="True"
+                                FontSize="16"
+                                Text="{Binding PasswordTxt, Mode=TwoWay}"
+                                IsEnabled="{Binding IsEnabledTxt}"
+                                TextColor="{StaticResource lbl-primary}"
+                                HorizontalOptions="FillAndExpand"
+                                VerticalOptions="FillAndExpand"/>
+                        </Frame>
+                        <Button Grid.Row="4"
+                            Text="¿Olvidaste tu contraseña?"
+                            Background="{StaticResource bg-container}"
+                            TextColor="{StaticResource lbl-primary}"
+                            FontSize="12"
+                            Margin="0,-20,0,0"
+                            FontAttributes="Bold"
+                            HorizontalOptions="EndAndExpand" />
+                        <Button Grid.Row="5"
+                            Margin="0,-10,0,0"
+                            Padding="10,5,10,5"
+                            Text="Iniciar sesión"
+                            FontSize="14"
+                            FontAttributes="Bold"
+                            BackgroundColor="{StaticResource btn-success}"
+                            TextColor="{StaticResource lbl-primary}"
+                            CornerRadius="10"
+                            Command="{Binding LoginCommand}"
+                            IsEnabled="{Binding IsEnabledTxt}" />
+                        <Button Grid.Row="6"
+                            Padding="10,5,10,5"
+                            Text="Registrarse"
+                            FontSize="14"
+                            FontAttributes="Bold"
+                            BackgroundColor="{StaticResource btn-primary-outline}"
+                            TextColor="{StaticResource btn-primary}"
+                            CornerRadius="10"
+                            IsEnabled="{Binding IsEnabledTxt}"
+                            Clicked="LogIn_Clicked" />
+                        <Label Grid.Row="7"
+                            Margin="0,15,0,0"
+                            Text="© Todos los derechos reservados"
+                            TextColor="{StaticResource lbl-secondary}"
+                            HorizontalOptions="CenterAndExpand" />
+                        <Label Grid.Row="8"
+                            Margin="0,-10,0,0"
+                            Text="Versión 2022.1.1"
+                            TextColor="{StaticResource lbl-secondary}"
+                            HorizontalOptions="CenterAndExpand" />
+                        <Label Grid.Row="9"
+                            Margin="0,-10,0,0"
+                            Text="Propiedad de SoDe Perú"
+                            TextColor="{StaticResource lbl-primary}"
+                            FontAttributes="Bold"
+                            HorizontalOptions="CenterAndExpand" />
+                    </Grid>
+                </Frame>
             </Grid>
-    </ContentPage.Content>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
