--- a/find_all_here/find_all_here/Shell.xaml
+++ b/find_all_here/find_all_here/Shell.xaml
@@ -25,8 +25,8 @@
     
     <TabBar>
         <ShellContent Title="Inicio" Icon="home.png" Route="HomeView" ContentTemplate="{DataTemplate local:HomeView}"/>
-        <ShellContent Title="Búsqueda" Icon="search.png" Route="SearchPage" ContentTemplate="{DataTemplate local:Search}" />
-        <ShellContent Title="Bandeja" Icon="inbox.png" Route="InboxPage" ContentTemplate="{DataTemplate local:Inbox}" />
+        <ShellContent Title="Búsqueda" Icon="search.png" Route="SearchView" ContentTemplate="{DataTemplate local:Search}" />
+        <ShellContent Title="Bandeja" Icon="bell.png" Route="InboxPage" ContentTemplate="{DataTemplate local:Inbox}" />
         <ShellContent Title="Perfil" Icon="user.png" Route="UserPage" ContentTemplate="{DataTemplate local:Profile}" />
     </TabBar>
 </Shell>
